<resources>
    <string name="app_name">Bargain Books</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="wishlist">Wishlist</string>
    <string name="search">Search</string>
    <string name="sale">Sale</string>
    <string name="import_">Import MyLibrary</string>
    <string name="send">Import</string>
    <string name="browse">Browse</string>
    <string name="browse_placeholder">No files selected &#8230;</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_placeholder">Title placeholder</string>
    <string name="author_placeholder">Long named author placeholder</string>
    <string name="sale_placeholder">82%</string>
    <string name="shop_placeholder">Holnaputáni könyv kiadó</string>
    <string name="price_placeholder">1980 Ft</string>
    <string name="original_price">Original price</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_clear">Clear</string>
    <string name="no_available_store">This is not available</string>
    <string name="wishlist_store_view">Store view</string>
    <string name="wishlist_book_view">Book view</string>
    <string name="count_placeholder">15</string>
    <string name="config">Config</string>
    <string name="save">Save</string>
    <string name="config_sale_default_level">Sale screen view</string>
    <string name="book_level">Book level</string>
    <string name="store_level">Store level</string>
    <string name="show_libri_5_percent_deals">Show 5% deals from Libri</string>
    <string name="store_filter">Store filter</string>
    <string name="date_placeholder">2018.05.23</string>
    <string name="sort">Sort</string>
    <string name="isbn_placeholder">9789639910256</string>
    <string name="lastUpdated">Last updated</string>
    <string name="isbn_label">ISBN</string>
    <string name="empty_string"></string>
    <string name="sale_percent">%d%%</string>
    <string name="sale_percent_parenthesis">(%d%%)</string>
    <string name="price_tag_huf">%d Ft</string>
    <string name="query_finished_sec">Finished in %d seconds</string>
    <string name="sorted_alphabet">Sorted alphabetically</string>
    <string name="sorted_discount">Sorted by discount</string>
    <string name="title_online_import">Import books from online wishlist</string>
    <string name="Import">Import </string>
    <string name="query">Query</string>
    <string name="libriImportError">Looks empty. :(</string>
    <string name="importing_x_books">Trying to import %d books</string>
    <string name="empty_url_error">Please give a valid URL for your public wishlist</string>
    <string name="import_libri_wishlist">Import Online wishlist</string>
    <string name="import_finished">Import finished</string>
    <string name="online_wishlist_list">Currently working wishlists: \n\nLibri (https://www.libri.hu/kivansaglista/?c121e9cefab6e067489521)\nMoly (https://moly.hu/tagok/username/kivansaglista)</string>
    <string name="libri">Libri</string>
    <string name="libri_wishlist_ex">https://www.libri.hu/kivansaglista/?c121e9cefab6e067b93b6d6ed8489521</string>
    <string name="moly">Moly</string>
    <string name="moly_wishlist_ex">https://moly.hu/tagok/cytog3n/kivansaglista</string>
    <string name="url">URL</string>
    <string name="wrong_url_error">Looks like the provided URL not supported</string>
    <string name="invalid_url_error">Please provide a valid URL</string>
    <string name="empty_wishlist_error">Looks empty :(</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="book_removed_from_wishlist">Book removed from you wishlist.</string>
    <string name="delete_confirm_title">Delete?</string>
    <string name="delete_confirm_text">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="book_detail_updated">Book detail updated</string>
    <string name="clear_confirm_title">Clear?</string>
    <string name="clear_confirm_text">Are you sure you want to clear the list?</string>
    <string name="book_wrong_detail">Wrong/missing details</string>
    <string name="clear_request_queue_confirm_text">There are active queries at the moment. Are you sure you want to cancel them?</string>
    <string name="clear_request_queue_confirm_title">Active queries</string>
    <string name="add_book_info">Please insert the link</string>
    <string name="action_add">Add</string>
    <string name="info">Information</string>
    <string name="add_book_info_title">Information about adding new books via URL</string>
    <string name="wishlist_info_title">Information about importing online wishlist</string>
    <string name="infobox_title">Information about the application</string>

    <string name="bookline_info_title">Bookline</string>
    <string name="bookline_info_value">1, Login to the page\n2, Open your wishlist\n3, Create a new list \n4, Switch back to wishlist \n5, Copy the page URL\n\nExample: \nhttps://bookline.hu/productshelf/productshelfMain.action?ename=02342650C115313FB2997AA3F9FB4752&amp;listName=_&amp;page=1</string>
    <string name="bookline_add_book_info_value">1, Open the page\n2, Search for the book\nCopy the page URL\n\nExample: \nhttps://bookline.hu/product/home.action?type=22&amp;_v=David_Guymer_Dorn_utolso_fia&amp;id=309244\n\nAdditional notes: \nSome books don\'t have ISBN code on the page. You can\'t add those.</string>

    <string name="libri_info_title">Libri</string>
    <string name="libri_info_value">1, Login to the page\n2, Open your wishlist\n3, Click on \'Publikus lista megtekintése\'\n4, Create a public wishlist\n5, Copy the URL of the public wishlist\n\nExample: \nhttps://www.libri.hu/kivansaglista/?c121e9cefab6e067b93b6d6ed8489521</string>
    <string name="libri_add_book_info_value">1, Open the page\n2, Search for the book\nCopy the page URL\n\nExample: \nhttps://www.libri.hu/konyv/dan_abnett.ravenor-visszater.html</string>

    <string name="moly_info_title">Moly</string>
    <string name="moly_info_value">1, Login to the page\n2, Open your wishlist\n3, Copy the page URL\n\nExample: \nhttps://moly.hu/tagok/cytog3n/kivansaglista\n\nAdditional note: You don\'t have to login, you can use the https://moly.hu/tagok/{username}/kivansaglista link with your username.</string>
    <string name="moly_add_book_info_value">1, Open the page\n2, Search for the book\nCopy the page URL\n\nExample: \nhttps://moly.hu/konyvek/dan-abnett-en-vagyok-a-meszaros \n\nAdditional notes:\nThere are books with multiples ISBN numbers. The application will add the book with the FIRST isbn. </string>

    <string name="szazad21_info_title">21. Század kiadó</string>
    <string name="szazad21_info_value">1, Login to the page\n2, Open your wishlist\n3, Click on \'Lista megosztása\'\n4, Fill the informations, and send the email into your adress\n5, Copy the URL from the bottom of the email\n\nExample: \nhttps://21.szazadkiado.hu/index.php?route=wishlist/wishlist&amp;listid=98b097d00037bca061d75bab5fb46556</string>
    <string name="szazad21_add_book_info_value">1, Open the page\n2, Search for the book\nCopy the page URL\n\nExample: \nhttps://21.szazadkiado.hu/az-uj-munkatars-michelle-frances \n\nAdditional notes: \nYou may have to edit the title, because the page don\'t have title field, just [Title - Author/Additional comment]. </string>

    <string name="mylibrary_wishlist_info_title">Information about importing from MyLibrary</string>
    <string name="mylibrary_info_title">MyLibrary application</string>
    <string name="mylibrary_info_value">1, Export your wishlist as an Excel file \n2, Browse the exported file for the application \n3, Click on import \n\nAdditional notes: \nImporting with this, will NOT merge with your previous list. This will create a new list based on the Excel file.</string>
    <string name="infobox_value">Nyuszifülnek ^^</string>
    <string name="incorrect_implementation">Wrong implementation. Please check the logs.</string>
</resources>
