<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/action_clear"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_book_view"
        android:orderInCategory="100"
        android:title="@string/wishlist_book_view"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_store_view"
        android:orderInCategory="100"
        android:title="@string/wishlist_store_view"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_baseline_sort_24px"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />

</menu>