<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/shopName"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/shop_placeholder"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/price_placeholder"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/off"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/sale_placeholder"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>