<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ImportOnlineWishlistFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/title_online_import"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/urlEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/url"
            android:inputType="textUri"
            android:paddingLeft="5dip"
            android:paddingTop="35dip"
            android:paddingRight="5dip"
            android:paddingBottom="5dip" />

        <Button
            android:id="@+id/queryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/resultBooks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dip">

        </LinearLayout>

        <Button
            android:id="@+id/importButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/Import"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>