<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/row"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/listChoiceBackgroundIndicator"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/shopName"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:text="@string/shop_placeholder"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/price_placeholder"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/off"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/sale_placeholder"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"/>

</LinearLayout>

