<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/compareBtn"
            android:layout_width="24dip"
            android:layout_height="24dip"
            android:layout_marginStart="20dip"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:background="@drawable/ic_baseline_visibility_24px" />

        <TextView
            android:id="@+id/bookName"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:paddingLeft="10dip"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/title_placeholder"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/price_placeholder"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/off"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/sale_placeholder"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>